dnl Process this file with autoconf to produce a configure script.

dnl Every other copy of the package version number gets its value from here
AC_INIT(littler,0.0.5)

dnl  Look for ancillary configure tools in tools
AC_CONFIG_AUX_DIR(tools)

dnl Options for Automake
dnl
dnl no-texinfo.tex - obviously means don't include the big texinfo.tex file
dnl                  in the dist.
dnl foreign - treats our package as non-gnu, essentially excudluding strict
dnl           checks for certain files like ChangeLog, NEWS, README, etc
dnl
AM_INIT_AUTOMAKE( no-texinfo.tex )

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

dnl ISODATE=`date +%Y-%m-%d`
dnl AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h string.h errno.h stdlib.h sys/types.h sys/stat.h unistd.h)

AC_HEADER_MAJOR
dnl AC_FUNC_ALLOCA
dnl AC_STRUCT_TM
dnl AC_STRUCT_ST_BLOCKS
dnl AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNC(setenv,AC_DEFINE(HAVE_SETENV,1, [Define if you have the setenv function.]))

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Let configure find R using the AC_PATH_PROG macro
AC_PATH_PROG(RPROG,R)

dnl Test the R version for shared library
AC_DEFUN([R_PROG],[
    AC_MSG_CHECKING(for R Program)
    # make sure that a well known include file exists
    # and the libR.so
    if ${RPROG} CMD config --ldflags 2>/dev/null | grep -v 'R was not built as a shared library' >/dev/null; then
        RHOME=`$RPROG RHOME`
		AM_CFLAGS=`${RPROG} CMD config --cppflags`
		AM_LDFLAGS="`${RPROG} CMD config --ldflags` -Wl,-rpath,${RHOME}/lib"
        AC_MSG_RESULT(shared library version of R found)
    else
        echo
        echo "R was not built as a shared library"
        echo
        echo "Either build it with one, or use another install of R"
        echo
        AC_MSG_ERROR( aborting! )
    fi
])

R_PROG
AC_SUBST(RPROG)
AC_SUBST(RHOME)
AC_SUBST(AM_CFLAGS)
AC_SUBST(AM_LDFLAGS)

AC_OUTPUT(Makefile littler.h)
